# fast-withdrawal

./: .env  .env.secrets.example  .env.test  .env.test.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  config.test.toml  config.toml  foundry.toml  justfile  nextest.toml  rustfmt.toml
broadcast/DeployWithdrawalLiquidityPool.s.sol/11155111/: run-latest.json
contracts/: WithdrawalLiquidityPool.sol
crates/action/: Cargo.toml
crates/action/src/: claim.rs  deposit.rs  finalize.rs  lib.rs  prove.rs  withdraw.rs
crates/balance/: Cargo.toml
crates/balance/src/: lib.rs  monitor.rs
crates/binding/: Cargo.toml
crates/binding/src/: across.rs  lib.rs  opstack.rs  token.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs  remote_signer.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  network.rs
crates/deposit/: Cargo.toml
crates/deposit/src/: lib.rs  state.rs
crates/withdrawal/: Cargo.toml
crates/withdrawal/src/: contract.rs  hash.rs  lib.rs  proof.rs  state.rs  types.rs
deploy/: .env.example  Dockerfile.orchestrator  Dockerfile.signer-proxy  config.toml  docker-compose.yml
script/: DeployWithdrawalLiquidityPool.s.sol
script/helper/: InitiateWithdrawals.s.sol
script/test/: 1_Setup.s.sol  2_E2E_WithdrawalFlow.s.sol  Base.s.sol
src/: WithdrawalLiquidityPool.sol
test/: WithdrawalLiquidityPool.t.sol
test/integration/: IntegrationTest.t.sol
test/invariant/: InvariantTest.t.sol
test/mocks/: MockOptimismPortal.sol
