[workspace]
resolver = "2"
members = [
    "bin/orchestrator",
    "crates/client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.92.0"

[workspace.lints.clippy]
missing-const-for-fn = "warn"
use-self = "warn"
redundant-clone = "warn"
option-if-let-else = "warn"
undocumented_unsafe_blocks = "deny"

[workspace.dependencies]
# Ethereum
alloy = { version = "1.4.3", features = ["full"] }

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.89"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"

[profile.release]
overflow-checks = true