[package]
name = "action"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy-sol-types = { workspace = true }
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }

eyre = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true