[package]
name = "balance"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
client = { workspace = true }

# Alloy for blockchain interaction
alloy-provider = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true }

# Error handling
eyre = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }

[lints]
workspace = true
