[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
alloy-provider = { workspace = true, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-primitives = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true